# Socket-Linux-Expriments

test01-single/client/: Makefile  Makefile.am  Makefile.in  client  client.c  config.h  config.h.in  config.status  configure  configure.ac
test01-single/client/.deps/: client.Po
test01-single/client/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
test01-single/server/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  server  server.c
test01-single/server/.deps/: server.Po
test01-single/server/autom4te.cache/: output.0  requests  traces.0  traces.1
test02-communication/client/: Makefile  client  client.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
test02-communication/client/.deps/: client.Po
test02-communication/client/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
test02-communication/server/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  server  server.c
test02-communication/server/.deps/: server.Po
test02-communication/server/autom4te.cache/: output.1  requests  traces.0  traces.1
test03-multiclient/client/: Makefile  client  client.c  config.h  config.h.in  config.status  configure  configure.ac
test03-multiclient/client/autom4te.cache/: output.1  requests  traces.0  traces.1
test03-multiclient/server/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  server  server.c
test03-multiclient/server/.deps/: server.Po
test03-multiclient/server/autom4te.cache/: output.0  requests  traces.0  traces.1
test04-mimic/calculator/: Makefile  Makefile.am  Makefile.in  calculator  calculator.c  config.h  config.status  configure  configure.ac
test04-mimic/calculator/.deps/: calculator.Po
test04-mimic/calculator/autom4te.cache/: output.0  requests  traces.0  traces.1
test04-mimic/client/: Makefile  Makefile.in  client  client.c  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac
test04-mimic/client/.deps/: client.Po
test04-mimic/client/autom4te.cache/: output.0  requests  traces.0  traces.1
test04-mimic/mimic/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  mimic  mimic.c
test04-mimic/mimic/.deps/: mimic.Po
test04-mimic/mimic/autom4te.cache/: output.1  requests  traces.0  traces.1
test04-mimic/server/: Makefile  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  server  server.c
test04-mimic/server/.deps/: server.Po
test04-mimic/server/autom4te.cache/: output.1  requests  traces.0  traces.1
